syntax = "proto3";
option go_package = "proto/user/user.proto";
package api;

import "google/protobuf/empty.proto";

service User {
    rpc Register(RegisterRequest) returns (UserResponse){}
    rpc Login(LoginRequest) returns (LoginResponse){}
    rpc GetUser(UserRequest) returns (GetUserResponse){}
    rpc GetAllUser(google.protobuf.Empty) returns (GetAllUserResponse){}
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse){}
    rpc DeleteUser(UserRequest) returns (UserResponse){}
}

// Request
message UserRequest {
    string userId = 1;
}

message RegisterRequest {
    string account = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
    string birthday = 5;
}

message LoginRequest {
    string account = 1;
    string password = 2;    
}

message UpdateUserRequest {
    string userId = 1;
    string firstName = 2;
    string lastName = 3;
    string birthday = 4; 
}

// Response
message UserResponse {
    string status = 1;
}

message LoginResponse {
    string userId = 1;
    string accessToken = 2;
    string refreshToken =3;
}

message GetUserResponse {
    string userId = 1;
    string firstName = 2;
    string lastName = 3;
    string birthday = 4;
}

message GetAllUserResponse {
    repeated GetUserResponse userList = 1;
}